// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(components) atoms/button take anchor button's snap shot 1`] = `
<div>
  <a
    class="twin-1fs6bgp-ButtonBox elv5i9d0"
    href="#"
    role="button"
    tabindex="0"
  >
    <p
      class="twin-cryf0r-Text-Button epv4mo00"
    >
      This is test
    </p>
  </a>
</div>
`;

exports[`(components) atoms/button take default button's snap shot 1`] = `
<div>
  <button
    class="twin-1fs6bgp-ButtonBox elv5i9d0"
    tabindex="0"
  >
    <p
      class="twin-cryf0r-Text-Button epv4mo00"
    >
      This is test
    </p>
  </button>
</div>
`;
